--- a/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCredit.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ShoppingCredits/ShoppingCredit.razor
@@ -165,13 +165,13 @@
                 <h4>@L["IssuedPoints"]</h4>
                 <Row Class="py-3" HorizontalGutter="10">
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="danger" Title="@L["Today"]" Amount="125"></PikachuCard>
+                        <PikachuCard Type="danger" Title="@L["Today"]" AmountVisible="true" Amount="125"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="warning" Title="@L["ThisWeek"]" Amount="99"></PikachuCard>
+                            <PikachuCard Type="warning" Title="@L["ThisWeek"]" AmountVisible="true" Amount="99"></PikachuCard>
                     </Column>
                     <Column ColumnSize="ColumnSize.Is4">
-                        <PikachuCard Type="success" Title="@L["ThisMonth"]" Amount="32"></PikachuCard>
+                            <PikachuCard Type="success" Title="@L["ThisMonth"]" AmountVisible="true" Amount="32"></PikachuCard>
                     </Column>
                 </Row>
             </CardBody>
